Name:                imagemagick
Version:             0.1
Synopsis:            bindins to imagemagick library
License:             GPL-3 
License-file:        LICENSE
Author:              Alexander Vershilov, Kirill Zaborsky
Maintainer:          alexander.vershilov@gmail.com
-- Copyright:           
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.8

Flag buildExamples
  description:       Build examples
  default:           False


Library
  Exposed-modules:      Graphics.ImageMagick.MagickCore
                      , Graphics.ImageMagick.MagickCore.FFI.Log
                      , Graphics.ImageMagick.MagickCore.FFI.MagickCore
                      , Graphics.ImageMagick.MagickCore.FFI.Option
                      , Graphics.ImageMagick.MagickCore.FFI.Gem
                      , Graphics.ImageMagick.MagickCore.Types.FFI.CacheView
                      , Graphics.ImageMagick.MagickCore.Types.FFI.Composite
                      , Graphics.ImageMagick.MagickCore.Types.FFI.Compress
                      , Graphics.ImageMagick.MagickCore.Types.FFI.Constitute
                      , Graphics.ImageMagick.MagickCore.Types.FFI.Distort
                      , Graphics.ImageMagick.MagickCore.Types.FFI.Exception
                      , Graphics.ImageMagick.MagickCore.Types.FFI.Fx
                      , Graphics.ImageMagick.MagickCore.Types.FFI.Geometry
                      , Graphics.ImageMagick.MagickCore.Types.FFI.Layer
                      , Graphics.ImageMagick.MagickCore.Types.FFI.Log
                      , Graphics.ImageMagick.MagickCore.Types.FFI.PaintMethod
                      , Graphics.ImageMagick.MagickCore.Types.FFI.PixelPacket
                      , Graphics.ImageMagick.MagickCore.Types.FFI.Statistic
                      , Graphics.ImageMagick.MagickCore.Types.FFI.Types
                      , Graphics.ImageMagick.MagickCore.Types.FFI.ChannelType
                      , Graphics.ImageMagick.MagickCore.Types.FFI.MagickFunction
                      , Graphics.ImageMagick.MagickCore.Types.FFI.FilterTypes
                      , Graphics.ImageMagick.MagickCore.Types.FFI.AlphaChannelType
                      , Graphics.ImageMagick.MagickCore.Types.MBits
                      , Graphics.ImageMagick.MagickWand
                      , Graphics.ImageMagick.MagickWand.FFI.ImageDrawing  
                      , Graphics.ImageMagick.MagickWand.FFI.DrawingWand
                      , Graphics.ImageMagick.MagickWand.FFI.MagickWand
                      , Graphics.ImageMagick.MagickWand.FFI.PixelIterator
                      , Graphics.ImageMagick.MagickWand.FFI.PixelWand
                      , Graphics.ImageMagick.MagickWand.FFI.Types
                      , Graphics.ImageMagick.MagickWand.FFI.WandImage
                      , Graphics.ImageMagick.MagickWand.FFI.WandProperties
  Build-depends:       base
                      , resourcet == 0.3.*
                      , transformers == 0.3.*
                      , vector == 0.9.*
                      , bytestring == 0.9.*
                      , text == 0.11.*
                      , system-filepath == 0.4.*
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand
  Build-tools:        hsc2hs
  
executable            resize
  If flag(buildExamples)
    Buildable:        True 
  Else 
    Buildable:        False
  Main-is:            examples/resize.hs
  Build-depends:       base
                      , resourcet == 0.3.*
                      , transformers == 0.3.*
                      , vector == 0.9.*
                      , bytestring == 0.9.*
                      , text == 0.11.*
                      , system-filepath == 0.4.*
                      , imagemagick
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand

executable            extent
  If flag(buildExamples)
    Buildable:        True 
  Else 
    Buildable:        False
  Main-is:            examples/extent.hs
  Build-depends:       base
                      , resourcet == 0.3.*
                      , transformers == 0.3.*
                      , vector == 0.9.*
                      , bytestring == 0.9.*
                      , text == 0.11.*
                      , system-filepath == 0.4.*
                      , imagemagick
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand

executable            floodfill
  If flag(buildExamples)
    Buildable:        True 
  Else 
    Buildable:        False
  Main-is:            examples/floodfill.hs
  Build-depends:       base
                      , resourcet == 0.3.*
                      , transformers == 0.3.*
                      , vector == 0.9.*
                      , bytestring == 0.9.*
                      , text == 0.11.*
                      , system-filepath == 0.4.*
                      , imagemagick
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand

executable            cyclops
  Main-is:            examples/cyclops.hs
  Buildable:          False
  Build-depends:       base
                      , resourcet == 0.3.*
                      , transformers == 0.3.*
                      , vector == 0.9.*
                      , bytestring == 0.9.*
                      , text == 0.11.*
                      , system-filepath == 0.4.*
                      , imagemagick
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand
  Buildable:          False

executable            clipmask
  Main-is:            examples/clipmask.hs
  Buildable:          False
  Build-depends:       base
                      , resourcet == 0.3.*
                      , transformers == 0.3.*
                      , vector == 0.9.*
                      , bytestring == 0.9.*
                      , text == 0.11.*
                      , system-filepath == 0.4.*
                      , imagemagick
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand
  Buildable:          False

executable            paint-trans
  If flag(buildExamples)
    Buildable:        True 
  Else
    Buildable:        False
  Main-is:            examples/trans_paint.hs
  Build-depends:       base
                      , resourcet == 0.3.*
                      , transformers == 0.3.*
                      , vector == 0.9.*
                      , bytestring == 0.9.*
                      , text == 0.11.*
                      , system-filepath == 0.4.*
                      , imagemagick
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand

executable            round-mask
  Main-is:            examples/round_mask.hs
  Buildable:          False
  Build-depends:       base
                      , resourcet == 0.3.*
                      , transformers == 0.3.*
                      , vector == 0.9.*
                      , bytestring == 0.9.*
                      , text == 0.11.*
                      , system-filepath == 0.4.*
                      , imagemagick
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand
  Buildable:          False

executable            make-tile
  Main-is:            examples/make_tile.hs
  Buildable:          False
  Build-depends:       base
                      , resourcet == 0.3.*
                      , transformers == 0.3.*
                      , vector == 0.9.*
                      , bytestring == 0.9.*
                      , text == 0.11.*
                      , system-filepath == 0.4.*
                      , imagemagick
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand

executable            draw-shapes
  Main-is:            examples/draw_shapes.hs
  Buildable:          False
  Build-depends:       base
                      , resourcet == 0.3.*
                      , transformers == 0.3.*
                      , vector == 0.9.*
                      , bytestring == 0.9.*
                      , text == 0.11.*
                      , system-filepath == 0.4.*
                      , imagemagick
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand
  Buildable:          False

executable            text-effects
  Main-is:            examples/text_effects.hs
  Buildable:          False
  Build-depends:       base
                      , resourcet == 0.3.*
                      , transformers == 0.3.*
                      , vector == 0.9.*
                      , bytestring == 0.9.*
                      , text == 0.11.*
                      , system-filepath == 0.4.*
                      , imagemagick
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand
  Buildable:          False

executable            gel
  Main-is:            examples/gel.hs
  Build-depends:        base
                      , resourcet == 0.3.*
                      , transformers == 0.3.*
                      , vector == 0.9.*
                      , bytestring == 0.9.*
                      , text == 0.11.*
                      , system-filepath == 0.4.*
                      , lifted-base == 0.1.*
                      , imagemagick
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand

executable            reflect
  Main-is:            examples/reflect.hs
  Buildable:          False
  Build-depends:        base
                      , resourcet == 0.3.*
                      , transformers == 0.3.*
                      , vector == 0.9.*
                      , bytestring == 0.9.*
                      , text == 0.11.*
                      , system-filepath == 0.4.*
                      , imagemagick
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand
  Buildable:          False

executable            3dlogo
  Main-is:            examples/3dlogo.hs
  Buildable:          False
  Build-depends:        base
                      , resourcet == 0.3.*
                      , transformers == 0.3.*
                      , vector == 0.9.*
                      , bytestring == 0.9.*
                      , text == 0.11.*
                      , system-filepath == 0.4.*
                      , imagemagick
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand
  Buildable:          False

executable            affine
  Main-is:            examples/affine.hs
  Buildable:          False
  Build-depends:        base
                      , resourcet == 0.3.*
                      , transformers == 0.3.*
                      , vector == 0.9.*
                      , bytestring == 0.9.*
                      , text == 0.11.*
                      , system-filepath == 0.4.*
                      , imagemagick
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand
  Buildable:          False

executable            grayscale
  Main-is:            examples/grayscale.hs
  Buildable:          False
  Build-depends:        base
                      , resourcet == 0.3.*
                      , transformers == 0.3.*
                      , vector == 0.9.*
                      , bytestring == 0.9.*
                      , text == 0.11.*
                      , system-filepath == 0.4.*
                      , imagemagick
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand
  Buildable:          False

executable            modulate
  Main-is:            examples/modulate.hs
  Buildable:          False
  Build-depends:        base
                      , resourcet == 0.3.*
                      , transformers == 0.3.*
                      , vector == 0.9.*
                      , bytestring == 0.9.*
                      , text == 0.11.*
                      , system-filepath == 0.4.*
                      , imagemagick
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand
  Buildable:          False

executable            landscape3d
  Main-is:            examples/landscape_3d.hs
  Buildable:          False
  Build-depends:        base
                      , resourcet == 0.3.*
                      , transformers == 0.3.*
                      , vector == 0.9.*
                      , bytestring == 0.9.*
                      , text == 0.11.*
                      , system-filepath == 0.4.*
                      , imagemagick
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand

executable            tilt-shift
  Main-is:            examples/tilt_shift.hs
  Build-depends:        base
                      , resourcet == 0.3.*
                      , transformers == 0.3.*
                      , vector == 0.9.*
                      , bytestring == 0.9.*
                      , text == 0.11.*
                      , system-filepath == 0.4.*
                      , imagemagick
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand
  Buildable:          False

executable            bunny
  Main-is:            examples/bunny.hs
  Build-depends:        base
                      , resourcet == 0.3.*
                      , transformers == 0.3.*
                      , vector == 0.9.*
                      , bytestring == 0.9.*
                      , text == 0.11.*
                      , system-filepath == 0.4.*
                      , imagemagick
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand
  Buildable:          False

executable            pixel-mod
  Main-is:            examples/pixel_mod.hs
  Build-depends:        base
                      , resourcet == 0.3.*
                      , transformers == 0.3.*
                      , vector == 0.9.*
                      , bytestring == 0.9.*
                      , text == 0.11.*
                      , system-filepath == 0.4.*
                      , imagemagick
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand
  Buildable:          False

executable            wandtest
  Main-is:            examples/wandtest.hs
  Build-depends:        base
                      , resourcet == 0.3.*
                      , transformers == 0.3.*
                      , vector == 0.9.*
                      , bytestring == 0.9.*
                      , text == 0.11.*
                      , system-filepath == 0.4.*
                      , imagemagick
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand
  Buildable:          True
