Name:                imagemagick
Version:             0.0.4.2
Synopsis:            bindings to imagemagick library
License:             OtherLicense
License-file:        LICENSE
Author:              Alexander Vershilov, Kirill Zaborsky
Maintainer:          alexander.vershilov@gmail.com
-- Copyright:
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.8
Description:         Basic image magick bindings.

extra-source-files:  data/*.jpg
                     data/*.png
                     data/*.gif
                     data/*.ico

Flag buildExamples
  description:       Build examples
  default:           False

Library
  hs-source-dirs:    src
  Exposed-modules:      Graphics.ImageMagick.MagickCore
                      , Graphics.ImageMagick.MagickCore.FFI.Gem
                      , Graphics.ImageMagick.MagickCore.FFI.Log
                      , Graphics.ImageMagick.MagickCore.FFI.Mime
                      , Graphics.ImageMagick.MagickCore.FFI.Option
                      , Graphics.ImageMagick.MagickCore.FFI.Quantize
                      , Graphics.ImageMagick.MagickCore.Types.FFI.CacheView
                      , Graphics.ImageMagick.MagickCore.Types.FFI.Composite
                      , Graphics.ImageMagick.MagickCore.Types.FFI.Compress
                      , Graphics.ImageMagick.MagickCore.Types.FFI.Constitute
                      , Graphics.ImageMagick.MagickCore.Types.FFI.Distort
                      , Graphics.ImageMagick.MagickCore.Types.FFI.DitherMethod
                      , Graphics.ImageMagick.MagickCore.Types.FFI.Exception
                      , Graphics.ImageMagick.MagickCore.Types.FFI.Fx
                      , Graphics.ImageMagick.MagickCore.Types.FFI.Geometry
                      , Graphics.ImageMagick.MagickCore.Types.FFI.Image
                      , Graphics.ImageMagick.MagickCore.Types.FFI.Layer
                      , Graphics.ImageMagick.MagickCore.Types.FFI.Log
                      , Graphics.ImageMagick.MagickCore.Types.FFI.PaintMethod
                      , Graphics.ImageMagick.MagickCore.Types.FFI.PixelPacket
                      , Graphics.ImageMagick.MagickCore.Types.FFI.Quantize
                      , Graphics.ImageMagick.MagickCore.Types.FFI.Statistic
                      , Graphics.ImageMagick.MagickCore.Types.FFI.Types
                      , Graphics.ImageMagick.MagickCore.Types.FFI.ChannelType
                      , Graphics.ImageMagick.MagickCore.Types.FFI.MagickFunction
                      , Graphics.ImageMagick.MagickCore.Types.FFI.FilterTypes
                      , Graphics.ImageMagick.MagickCore.Types.FFI.AlphaChannelType
                      , Graphics.ImageMagick.MagickCore.Types.FFI.ColorspaceType
                      , Graphics.ImageMagick.MagickCore.Types.MBits
                      , Graphics.ImageMagick.MagickCore.Types
                      , Graphics.ImageMagick.MagickCore.Option
                      , Graphics.ImageMagick.MagickCore.Mime
                      , Graphics.ImageMagick.MagickCore.Exception
                      , Graphics.ImageMagick.MagickCore.Gem
                      , Graphics.ImageMagick.MagickCore.Quantize
                      , Graphics.ImageMagick.MagickWand
                      , Graphics.ImageMagick.MagickWand.WandImage
                      , Graphics.ImageMagick.MagickWand.Types
                      , Graphics.ImageMagick.MagickWand.PixelWand
                      , Graphics.ImageMagick.MagickWand.PixelPacket
                      , Graphics.ImageMagick.MagickWand.PixelIterator
                      , Graphics.ImageMagick.MagickWand.MagickWand
                      , Graphics.ImageMagick.MagickWand.DrawingWand
                      , Graphics.ImageMagick.MagickWand.Utils
                      , Graphics.ImageMagick.MagickWand.FFI.ImageDrawing
                      , Graphics.ImageMagick.MagickWand.FFI.DrawingWand
                      , Graphics.ImageMagick.MagickWand.FFI.MagickWand
                      , Graphics.ImageMagick.MagickWand.FFI.PixelIterator
                      , Graphics.ImageMagick.MagickWand.FFI.PixelWand
                      , Graphics.ImageMagick.MagickWand.FFI.Types
                      , Graphics.ImageMagick.MagickWand.FFI.WandImage
                      , Graphics.ImageMagick.MagickWand.FFI.WandProperties
  build-depends:       base >= 4.0 && <5.0
                      , resourcet >= 0.3 && <1.2
                      , transformers >= 0.3 && < 0.6
                      , vector >= 0.9 && < 0.13
                      , bytestring >= 0.9 && <0.12
                      , text >= 0.11 && <1.3
                      , filepath >= 1.0 && < 2.0
 --                    , MonadCatchIO-transformers == 0.3.*
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  if os(darwin)
        cpp-options:  -DCABAL_OS_DARWIN
  if os(windows)
        cpp-options:  -DCABAL_OS_WINDOWS
  pkgconfig-depends:  ImageMagick, MagickWand >= 6.7
  Build-tools:        hsc2hs

executable            resize
  If flag(buildExamples)
    Buildable:        True
    build-depends:      base >= 4.0 && <5.0
                      , resourcet
                      , transformers
                      , vector
                      , bytestring
                      , text
                      , filepath
                      , imagemagick
  Else
    Buildable:        False
  Main-is:            examples/resize.hs
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand


executable            extent
  If flag(buildExamples)
    Buildable:        True
    build-depends:      base >= 4.0 && <5.0
                      , resourcet
                      , transformers
                      , vector
                      , bytestring
                      , text
                      , filepath
                      , imagemagick
  Else
    Buildable:        False
  Main-is:            examples/extent.hs
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand


executable            floodfill
  If flag(buildExamples)
    Buildable:        True
    build-depends:      base >= 4.0 && <5.0
                      , resourcet
                      , transformers
                      , vector
                      , bytestring
                      , text
                      , filepath
                      , imagemagick
  Else
    Buildable:        False
  Main-is:            examples/floodfill.hs
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand


executable            cyclops
  Main-is:            examples/cyclops.hs
  If flag(buildExamples)
    Buildable:        True
    build-depends:      base >= 4.0 && <5.0
                      , resourcet
                      , transformers
                      , vector
                      , bytestring
                      , text
                      , filepath
                      , imagemagick
  Else
    Buildable:        False
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand


executable            clipmask
  Main-is:            examples/clipmask.hs
  If flag(buildExamples)
    Buildable:        True
    build-depends:      base >= 4.0 && <5.0
                      , resourcet
                      , transformers
                      , vector
                      , bytestring
                      , text
                      , filepath
                      , imagemagick
  Else
    Buildable:        False
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand


executable            paint-trans
  If flag(buildExamples)
    Buildable:        True
    build-depends:      base >= 4.0 && <5.0
                      , resourcet
                      , transformers
                      , vector
                      , bytestring
                      , text
                      , filepath
                      , imagemagick
  Else
    Buildable:        False
  Main-is:            examples/trans_paint.hs
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand


executable            round-mask
  Main-is:            examples/round_mask.hs
  If flag(buildExamples)
    Buildable:        True
    build-depends:      base >= 4.0 && <5.0
                      , resourcet
                      , transformers
                      , vector
                      , bytestring
                      , text
                      , filepath
                      , imagemagick
  Else
    Buildable:        False
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand


executable            make-tile
  Main-is:            examples/make_tile.hs
  If flag(buildExamples)
    Buildable:        True
    build-depends:      base >= 4.0 && <5.0
                      , resourcet
                      , transformers
                      , vector
                      , bytestring
                      , text
                      , filepath
                      , imagemagick
  Else
    Buildable:        False
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand

executable            draw-shapes
  Main-is:            examples/draw_shapes.hs
  If flag(buildExamples)
    Buildable:        True
    build-depends:      base >= 4.0 && <5.0
                      , resourcet
                      , transformers
                      , vector
                      , bytestring
                      , text
                      , filepath
                      , imagemagick
  Else
    Buildable:        False
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand


executable            text-effects
  Main-is:            examples/text_effects.hs
  If flag(buildExamples)
    Buildable:        True
    build-depends:      base >= 4.0 && <5.0
                      , resourcet
                      , transformers
                      , vector
                      , bytestring
                      , text
                      , filepath
                      , imagemagick
  Else
    Buildable:        False
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand


executable            gel
  Main-is:            examples/gel.hs
  If flag(buildExamples)
    Buildable:        True
    build-depends:      base >= 4.0 && <5.0
                      , resourcet
                      , transformers
                      , vector
                      , bytestring
                      , text
                      , filepath
                      , lifted-base
                      , imagemagick
  Else
    Buildable:        False
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand

executable            reflect
  Main-is:            examples/reflect.hs
  If flag(buildExamples)
    Buildable:        True
    build-depends:      base >= 4.0 && <5.0
                      , resourcet
                      , transformers
                      , vector
                      , bytestring
                      , text
                      , filepath
                      , imagemagick
  Else
    Buildable:        False
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand


executable            3dlogo
  Main-is:            examples/3dlogo.hs
  If flag(buildExamples)
    Buildable:        True
    build-depends:      base >= 4.0 && <5.0
                      , resourcet
                      , transformers
                      , vector
                      , bytestring
                      , text
                      , filepath
                      , imagemagick
  Else
    Buildable:        False
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand


executable            affine
  Main-is:            examples/affine.hs
  If flag(buildExamples)
    Buildable:        True
    build-depends:      base >= 4.0 && <5.0
                      , resourcet
                      , transformers
                      , vector
                      , bytestring
                      , text
                      , filepath
                      , imagemagick
  Else
    Buildable:        False
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand


executable            grayscale
  Main-is:            examples/grayscale.hs
  If flag(buildExamples)
    Buildable:        True
    build-depends:      base >= 4.0 && <5.0
                      , resourcet
                      , transformers
                      , vector
                      , bytestring
                      , text
                      , filepath
                      , imagemagick
  Else
    Buildable:        False
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand


executable            modulate
  Main-is:            examples/modulate.hs
  If flag(buildExamples)
    Buildable:        True
    build-depends:      base >= 4.0 && <5.0
                      , resourcet
                      , transformers
                      , vector
                      , bytestring
                      , text
                      , filepath
                      , imagemagick
  Else
    Buildable:        False
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand
  Buildable:          False


executable            landscape3d
  Main-is:            examples/landscape_3d.hs
  If flag(buildExamples)
    Buildable:        True
    build-depends:      base >= 4.0 && <5.0
                      , resourcet
                      , transformers
                      , vector
                      , bytestring 
                      , text
                      , filepath
                      , imagemagick
  Else
    Buildable:        False
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand


executable            tilt-shift
  Main-is:            examples/tilt_shift.hs
  If flag(buildExamples)
    Buildable:        True
    build-depends:      base >= 4.0 && <5.0
                      , resourcet
                      , transformers
                      , vector
                      , bytestring
                      , text
                      , filepath
                      , imagemagick
  Else
    Buildable:        False
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand


executable            bunny
  Main-is:            examples/bunny.hs
  If flag(buildExamples)
    Buildable:        True
    build-depends:      base >= 4.0 && <5.0
                      , resourcet
                      , transformers
                      , vector
                      , bytestring
                      , text
                      , filepath
                      , imagemagick
  Else
    Buildable:        False
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand


executable            pixel-mod
  Main-is:            examples/pixel_mod.hs
  If flag(buildExamples)
    Buildable:        True
    build-depends:      base >= 4.0 && <5.0
                      , resourcet
                      , transformers
                      , vector
                      , bytestring
                      , text
                      , filepath
                      , imagemagick
  Else
    Buildable:        False
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand


executable            wandtest
  Main-is:            examples/wandtest.hs
  If flag(buildExamples)
    Buildable:        True
    build-depends:      base >= 4.0 && <5.0
                      , resourcet
                      , transformers
                      , vector
                      , bytestring
                      , text
                      , filepath
                      , imagemagick
  Else
    Buildable:        False
  extensions:         EmptyDataDecls
  Ghc-options:        -Wall
  pkgconfig-depends:  ImageMagick, MagickWand


test-suite           image-tests
  type:              exitcode-stdio-1.0
  main-is:           test/ImageTest.hs
  build-depends:       base >= 4.0 && <5.0
                     , lifted-base
                     , directory
                     , resourcet
                     , transformers
                     , vector
                     , bytestring
                     , text
                     , filepath
                     , imagemagick
                     , QuickCheck >= 2
                     , tasty
                     , tasty-hunit
  Ghc-options:       -Wall
  extensions:        EmptyDataDecls
  pkgconfig-depends: ImageMagick, MagickWand


source-repository head
  type:     git
  location: git://github.com/qnikst/imagemagick.git
